salesforce_sfdx/main/default/objects/HealthCloudGA__ContactContactRelation__c/fields/ABCBS_ID__c.field-meta.xml
<CustomField>
    <fullName>ABCBS_ID__c</fullName>
    <formula>HealthCloudGA__Contact__r.Account.ABCBS_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABCBS ID</label>
    <type>Text</type>
</CustomField>