salesforce_sfdx/main/default/objects/HealthCloudGA__ContactContactRelation__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <formula>HealthCloudGA__Contact__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>