salesforce_sfdx/main/default/objects/HealthCloudGA__ContactContactRelation__c/fields/isPCP__c.field-meta.xml
<CustomField>
    <fullName>isPCP__c</fullName>
    <formula>AND(HealthCloudGA__Role__r.Name=&quot;Primary Care Provider (PCP)&quot;, HealthCloudGA__Active__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isPCP</label>
    <type>Checkbox</type>
</CustomField>