salesforce_sfdx/main/default/objects/HealthCloudGA__ContactContactRelation__c/fields/Member_Account__c.field-meta.xml
<CustomField>
    <fullName>Member_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store the member&apos;s account id so that we can use it for the logic in the Patient card to display PCP information</description>
    <label>Member Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Contact Relations</relationshipLabel>
    <relationshipName>Contact_Contact_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>