salesforce_sfdx/main/default/objects/HealthCloudGA__ContactContactRelation__c/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <formula>HealthCloudGA__Contact__r.Account.NPI__c</formula>
    <label>NPI</label>
    <type>Text</type>
</CustomField>